tests/error/result_errors/result_tag_too_big_generic.err
Error: Tag too long (at $FILE:7:11)
  | 
5 | @guppy
6 | def foo(tag: str @ comptime, y: bool) -> None:
7 |     result(tag, y)
  |            ^^^ Result tag is too long

Note: Result tags are limited to 200 bytes

Note: Parameter `tag` was instantiated to
`✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅✅❌`

Guppy compilation failed due to 1 previous error
